[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "proteinflow"
version = "1.4.0"
authors = [
    {name = "Liza Kozlova", email = "liza@adaptyvbio.com"},
    {name = "Arthur Valentin", email = "arthur@adaptyvbio.com"}
]
description = "Versatile pipeline for processing protein structure data for deep learning applications."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
dependencies = [
    "numpy>=1.17",
    "editdistance>=0.6.0",
    "Biopython==1.79",
    "click>=8.1.3",
    "biopandas>=0.4.1",
    "boto3==1.24.59",
    "p_tqdm>=1.4.0",
    "networkx==2.8.8", # for partitioning
    "einops>=0.6.0",
    "pandas>=1.5.2",
    "torch>=1.10.0",
    "biotite==0.35.0",
    "aiobotocore==2.4.2",
    "awscli==1.25.60",
    "bs4>=0.0.1",
    "rcsbsearch",
    "pre-commit",
]
keywords = ["bioinformatics", "dataset", "protein", "PDB", "deep learning"]

[project.scripts]
proteinflow = "proteinflow.scripts.proteinflow_cli:cli"

[tool.setuptools.packages]
find = {}

[tool.pydocstyle]
convention = "numpy"
match_dir = 'proteinflow'
match = '__init__.py'
