[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "proteinflow"
version = "2.7.0"
authors = [
    {name = "Liza Kozlova", email = "liza@adaptyvbio.com"},
]
description = "Versatile pipeline for processing protein structure data for deep learning applications."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
dependencies = [
    "numpy>=1.21,<1.25",
    "editdistance>=0.6.0",
    "Biopython==1.79",
    "click>=8.1.3",
    "biopandas>=0.4.1",
    "boto3",
    "p_tqdm>=1.4.0",
    "networkx==2.8.8", # for partitioning
    "einops>=0.6.0",
    "pandas>=1.5.2",
    "torch>=1.10.0",
    "biotite==0.35.0",
    "aiobotocore",
    "awscli",
    "bs4>=0.0.1",
    "pyyaml>=6",
    "rcsbsearch",
    "pre-commit",
    "rdkit",
    "pypdb",
    "joblib",
]
keywords = ["bioinformatics", "dataset", "protein", "PDB", "deep learning", "antibody"]

[project.scripts]
proteinflow = "proteinflow.cli:cli"

[project.optional-dependencies]
processing = [
    "py3Dmol",
    "methodtools",
    "tmtools",
    "fair-esm",
    "MDAnalysis",
    "ablang",
    "igfold",
    "immunebuilder",
    "blosum>=2.0",
]

[tool.setuptools.packages]
find = {}

[tool.pydocstyle]
convention = "numpy"

[tool.docsig]
disable = [
    "E109",
]
ignore-no-parameters = true
